k8s/namespace-notio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: notio
  labels:
    app.kubernetes.io/managed-by: helm
    environment: production
